<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Main application and miscellaneous strings -->
    <string name="app_name">DICT Client</string>
    <string name="title_about">About</string>
    <string name="title_help">DICT Client Help</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_error">Error</string>
    <string name="title_donate">Donate</string>
    <string name="hint_search">Enter a word</string>
    <string name="button_ok">OK</string>
    <string name="button_no">No</string>
    <string name="button_yes">Yes</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="button_dictionary_information">Dictionary Information</string>
    <string name="button_donate">Donate</string>
    <string name="button_search">Search</string>

    <!-- MainActivity result strings -->
    <string name="result_definitions">No definitions found.</string>
    <string name="result_dict_info">No dictionary info received.</string>
    <string name="result_matches">No matches found.</string>

    <!-- Dictionary client task message strings -->
    <string name="task_define">Looking up word...</string>
    <string name="task_match">Searching for matches...</string>
    <string name="task_dict_info">Retrieving dictionary information...</string>
    <string name="task_dict_list">Retrieving available dictionaries and strategies...</string>

    <!-- MainActivity Menus -->
    <string name="menu_back">Back</string>
    <string name="menu_forward">Forward</string>
    <string name="menu_share">Share</string>
    <string name="menu_host_select">Select Host</string>
    <string name="menu_refresh_dictionaries">Refresh Dictionaries</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <!-- Strings related to SelectHostActivity -->
    <string name="title_activity_select_host">Select Host</string>

    <!-- Host Management Menus -->
    <string name="menu_add_host">Add Host</string>
    <string name="menu_delete_host">Delete Host</string>

    <!-- Host management error messages -->
    <string name="error_host_readonly">The selected host is not modifiable.</string>
    <string name="error_host_name_required">Host Name is required.</string>

    <!-- EditHostDialog Strings -->
    <string name="dialog_edit_tag">EditDictionaryHostDialog</string>
    <string name="dialog_edit_host_hint">Host Name</string>
    <string name="dialog_edit_port_hint">Port</string>
    <string name="dialog_edit_description_hint">Description</string>
    <string name="dialog_add_title">Add New Host</string>
    <string name="dialog_edit_title">Edit Host</string>

    <!-- Donation notification strings -->
    <string name="notification_donate_donate">Donate</string>
    <string name="notification_donate_no_thanks">No Thanks</string>

    <!-- Donation dialog strings -->
    <string name="dialog_donate_title">DICT Client Donation</string>
    <string name="dialog_donate_text">If you find this application useful, please consider donating.</string>
    <string name="dialog_donate_disclaimer">Donations are not tax deductible.</string>
    <string name="dialog_donate_1">$1</string>
    <string name="dialog_donate_2">$3</string>
    <string name="dialog_donate_3">$5</string>
    <string name="dialog_donate_pass">No Thanks</string>

    <!-- Donation response message strings -->
    <string name="dialog_title_thank_you">Thank You</string>
    <string name="dialog_message_thank_you">Thank you for your donation!</string>
    <string name="dialog_message_unavailable">Unable to make donation, please contact support.</string>
    <string name="dialog_message_service_unavailable">No network connection is available, please try donating again later.</string>
    <string name="dialog_message_unexpected_error">An unexpected error has occurred.</string>
    <string name="dialog_message_billing_unavailable">Your current version of Android does not support the required API for making this donation.</string>

    <!-- Settings Strings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_summary_general">General preferences</string>

    <string name="pref_header_manage_hosts">Manage Hosts</string>
    <string name="pref_summary_manage_hosts">Add, edit, and delete dictionary hosts</string>

    <string name="pref_title_default_host">Default Host</string>
    <string name="pref_key_default_host">default_host</string>
    <string name="pref_value_default_host">1</string>

    <string name="pref_title_display_option">Result Display Options</string>
    <string name="pref_key_display_option">display_option</string>
    <string name="pref_display_option_fit_width">FIT_WIDTH</string>

    <string name="pref_title_font_size">Default Font Size</string>
    <string name="pref_key_font_size">font_size</string>
    <string name="pref_value_font_size">14</string>

    <string name="pref_title_cache_time">Dictionary Cache Timeout</string>
    <string name="pref_key_cache_time">cache_time</string>
    <string name="pref_value_cache_time">7</string>

    <!-- Keys for settings not visible to user -->
    <string name="pref_key_donated">donated</string>
</resources>
